--- a/public/resources/css/app.css
+++ b/public/resources/css/app.css
@@ -156,14 +156,14 @@ img {
 
 .header-info h1 {
     font-family: "Monoid Bold";
-    font-size: 3.5vw;
+    font-size: 2.9vw;
     min-font-size: 300px;
     font-weight: 600;
 }
 
 .header-info span {
     font-family: "Monoid";
-    font-size: 3.5vw;
+    font-size: 2.9vw;
     font-weight: 300;
 }
 
@@ -202,6 +202,20 @@ img {
     outline: none;
     border: 1px solid black;
     margin-top: 10px;
+    position: absolute;
+    z-index: 1000;
+    left: 90px;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 576px;
+}
+
+.header-info .search-results button {
+    width: 100%;
+    border: 0;
+    border-top: 1px solid black;
+    margin: 0;
 }
 
 .header-info .search-results .result {
@@ -384,6 +398,10 @@ button.selected {
     border: 1px solid black;
 }
 
+.group .gallery-navigation {
+    margin-bottom: 10px;
+}
+
 .group .gallery-navigation h1 {
     text-align: center;
 }
@@ -443,6 +461,10 @@ button.selected {
 
     .header-info h1, .header-info span {
         font-size: 28px;
+    }
+
+    .header-info .search-results {
+        left: 0;
     }
 
     .header-info span {
