Added sticky header to the portfolio page to make sure that people can access the sections from any position.

--- a/public/resources/css/app.css
+++ b/public/resources/css/app.css
@@ -241,6 +241,7 @@ img {
 }
 
 .header-info .search-results .result a {
+    overflow-wrap: break-word;
     width: 100%;
     padding: 10px;
     font-size: 18px;
